# xsampa_to_ipa

./: LICENSE  README.md  pyproject.toml
src/: __init__.py
