[tool.poetry]
name = "python-template"
version = "1.0.0"
description = "Python project template"
authors = ["AnnexK <roadto3kmmr@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.4"
mypy = "^1.6.1"
black = "^23.10.1"
pytest = "^7.4.3"

[tool.poetry.group.lsp.dependencies]
python-lsp-server = "^1.9.0"
pylsp-mypy = "^0.6.8"
python-lsp-black = "^1.3.0"
python-lsp-ruff = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = [
	"F", # pyflakes
	"E", # pycodestyle error
	"W", # pycodestyle warning
	"I", # isort
	"N", # pep8-naming
	"D", # pydocstyle
	"UP", # pyupgrade
	"S110", # try-except-pass detected
	"S112", # try-except-continue detected
	"B", # flake8-bugbear
	"A", # flake8-builtins
	"COM", # flake8-commas
	"C4", # flake8-comprehensions
	"DTZ", # flake8-datetimez
	"ISC", # flake8-implicit-str-concat
	"G", # flake8-logging-format
	"INP", # flake8-no-pep420
	"PIE", # flake8-pie
	"T20", # flake8-print
	"PT", # flake8-pytest-style
	"RSE", # flake8-raise
	"RET", # flake8-return
	"SLF", # flake8-self
	"SIM", # flake8-simplify
	"TID252", # relative imports from parent modules are banned (`from .. import stuff`)
	"ARG", # flake8-unused-arguments
	"PTH", # flake8-use-pathlib
	"FIX", # flake8-fixme
	"ERA", # eradicate
	"TRY", # tryceratops
]
ignore = [
	"F821", # undefined name (covered by mypy)
	"E999", # syntax error (covered by mypy)
	"D100", # missing docstring in public module
	"D104", # missing docstring in public package
	"D107", # missing docstring in `__init__`
	"D200", # one-line docstring should fit on one line
	"D212", # multi-line docstring summary should start at the first line
]
